--- a/galeria.html
+++ b/galeria.html
@@ -107,7 +107,8 @@
         <div class="carousel-item active mt-3 mb-2">
           <img
             class="d-block mx-auto my-auto"
-            height="400vh"
+            height="300px"
+            width="300px"
             src="/img/Tecla casete2_bkgnd.png"
             alt="First slide"
           />
@@ -115,7 +116,8 @@
         <div class="carousel-item mt-3">
           <img
             class="d-block mx-auto my-auto"
-            height="400vh"
+            height="300px"
+            width="400px"
             src="/img/carro1.png"
             alt="Second slide"
           />
@@ -123,16 +125,18 @@
         <div class="carousel-item mt-3 my-auto">
           <img
             class="d-block mx-auto my-auto"
-            height="400vh"
+            height="300px"
+            width="350px"
             src="/img/modelo medico_bkgnd.png"
             alt="Third slide"
           />
         </div>
         \
-        <div class="carousel-item mt-3 my-auto">
+        <div class="carousel-item mt-5 my-auto">
           <img
             class="d-block mx-auto my-auto"
-            height="400vh"
+            height="300px"
+            width="450px"
             src="/img/explosinado_1.png"
             alt="Third slide"
           />
