--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- SHOWCASE -->
     <header class="showcase">
         <h2> Nuevas Noticias</h2>
-        <p  class="mx-5 my-auto text-center">Okoku acaba de lanzar su primera revista, donde comparte datos importantes acerca de su empresa, sus productos y sus procesos de producción. Puede ser visto como una revista o un catálogo de interés. </p>
+        <p  class="mx-5 my-auto text-center">Okoku acaba de lanzar su primera revista, donde comparte datos importantes acerca de su empresa, sus productos y sus procesos de producción. Puedes acceder a esta revista dandole click en el siguiente boton.</p>
         <a href="revista.html" class="btn">leer mas<i class="fas fa-angle-double-right"></i> </a>
 
     </header>
