--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Okoku.co</title>
+    <title>Okoku.co Contacto</title>
     <!-- FONT AWESOME -->
     <link
       rel="stylesheet"
